Fixed inconsistent case on filenames preventing compilation on linux systems

--- a/SourceCode/AgDiag/Source/AgDiag.csproj
+++ b/SourceCode/AgDiag/Source/AgDiag.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Forms\FormTimedMessage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormTimedMessage.designer.cs">
+    <Compile Include="Forms\FormTimedMessage.Designer.cs">
       <DependentUpon>FormTimedMessage.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
