Moved serial device logic into a seprate set of classes. Refactored GPS1 code to make use of the new class.

--- a/SourceCode/AgIO/Source/AgIO.csproj
+++ b/SourceCode/AgIO/Source/AgIO.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Classes\ListViewColumnSorterExt.cs" />
     <Compile Include="Classes\CRadioChannel.cs" />
     <Compile Include="Classes\CSettings.cs" />
+    <Compile Include="Classes\SerialComm\SerialComm.cs" />
+    <Compile Include="Classes\SerialComm\SerialCommController.cs" />
     <Compile Include="Forms\FormCommPicker.cs">
       <SubType>Form</SubType>
     </Compile>
